<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context="io.github.wolfterro.hendroid.InfoActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textViewCover"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/cover"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageViewCover"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/cover"
                android:cropToPadding="false"
                android:scaleType="fitCenter" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorAccent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp" />

            <TextView
                android:id="@+id/textViewAlbumName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/albumName"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                android:layout_marginBottom="10dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewNameValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/notAvailable"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewNumberOfPages"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/numberOfPages"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:layout_marginBottom="10dp"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewNumberValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/notAvailable"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewAlbumLanguage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/albumLanguage"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                android:layout_marginBottom="10dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewLanguageValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/notAvailable"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewUploader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/uploader"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                android:layout_marginBottom="10dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewUploaderValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/notAvailable"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewUploadDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/uploadDate"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                android:layout_marginBottom="10dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewUploadDateValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/notAvailable"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/size"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                android:layout_marginBottom="10dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewSizeValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/notAvailable"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewOutputDir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/outputDir"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:layout_marginBottom="10dp"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewOutputDirValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/notAvailable"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorAccent"
                android:layout_marginBottom="15dp" />

            <Button
                android:id="@+id/buttonDownloadAlbum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/colorBackgroundButton"
                android:text="@string/downloadAlbum"
                android:textColor="@android:color/white" />

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
